# ToyLang

./: .clang-format  .clang-tidy  CMakeLists.txt  ToyLang.txt  conanfile.txt
src/: AST.cpp  AST.h  ASTDumper.h  ASTVisitor.h  CMakeLists.txt  Parser.h  toy.cpp
src/ir/: Alloca.h  AllocaInst.h  Argument.h  BasicBlock.cpp  BasicBlock.h  BranchInst.h  CMakeLists.txt  CallInst.h  CompilationUnit.h  Constant.h  Function.cpp  Function.h  IRCompilationUnit.cpp  IRCompilationUnit.h  IRDumper.h  IRVisitor.h  Instruction.h  Operand.h  Operation.h  Value.cpp  Value.h
src/irgen/: CMakeLists.txt  IRGenerator.cpp  IRGenerator.h
src/parser/: AST.cpp  AST.h  ASTDumper.h  ASTVisitor.h  CMakeLists.txt  Error.h  Parser.h
src/support/: Noncopyable.h
